fix: eliminate white space after name

--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -479,22 +479,22 @@ textarea:focus {
   display: none;
 }
 
-/* Resume */
+/* Curriculum Vitae */
 
 .remove-bottom-margin {
   margin-bottom: 0;
 }
 
-.resume-btn {
+.cv-btn {
   margin-top: -0.3rem;
   margin-bottom: -1.2rem;
   text-align: right;
 }
 
 @media screen and (max-width: 568px) {
-  .resume-btn {
-    margin-top: -3.8rem;
-    margin-bottom: 2.3rem;
+  .cv-btn {
+    margin-top: 0.2rem;
+    margin-bottom: -2.3rem;
   }
 }
 
